<resources>
    <string name="app_name">The UOS</string>
    <string name="univ">서울시립대학교</string>
    <string name="apply">적용</string>
    <string name="update">업데이트</string>
    <string name="later">나중에</string>
    <string name="confirm">확인</string>
    <string name="caution">주의</string>
    <string name="canceled">취소되었습니다.</string>
    <string name="cancel">취소</string>
    <string name="success">성공하였습니다.</string>
    <string name="saved_file">%1$s 폴더에 %2$s 파일이 저장되었습니다.</string>
    <string name="saved">에 저장되었습니다.</string>
    <string name="save">저장되었습니다.</string>
    <string name="deleted">삭제되었습니다.</string>
    <string name="failed">실패하였습니다.</string>
    <string name="error_occur">에러!</string>
    <string name="error_internet">인터넷 또는 학교 서버 접속에 실패하였습니다.</string>
    <string name="error_no_related_activity_found">관련있는 앱을 찾을 수 없습니다.</string>
    <string name="error_no_activity_found_to_handle_file">해당 파일을 열 수 있는 앱을 찾을 수 없습니다.</string>
    <string name="error_cannot_execute">작업을 실행할 수 없습니다.</string>
    <string name="finish_update">업데이트 완료</string>
    <string name="progress_finish">작업 완료</string>
    <string name="progress_downloading">다운로드 중…</string>
    <string name="progress_while_updating">로딩중…</string>
    <string name="progress_while_loading" translatable="false">Loading…</string>
    <string name="progress_version_check">최신 버전 확인중…</string>
    <string name="progress_ongoing">처리 중…</string>
    <string name="progress_wait">잠시 후에 시도하세요.</string>
    <string name="progress_fail">로딩 실패</string>
    <string name="progress_failed_ongoing_another">다른 작업이 진행중입니다.</string>
    <string name="progress_retry">다시시도</string>
    <string name="before_finish">\'뒤로\'버튼을 한번 더 누르시면 종료됩니다.</string>
    <string name="title_section0_home">The UOS</string>
    <string name="title_tab_announce">공지사항</string>
    <string name="title_tab_restaurant">식당 메뉴</string>
    <string name="title_tab_book_search">도서 검색</string>
    <string name="title_tab_library_seat">열람실 정보</string>
    <string name="title_tab_phone">교내 전화번호</string>
    <string name="title_tab_timetable">시간표</string>
    <string name="title_tab_search_subject">교과목 검색</string>
    <string name="title_tab_search_empty_room">빈 강의실 조회</string>
    <string name="title_tab_schedule">학사일정</string>
    <string name="title_tab_building_classroom">건물 및 강의실 정보</string>
    <string name="title_tab_wise_score">성적 조회</string>
    <string name="title_tab_map">학교 지도</string>
    <string name="title_tab_score">수업평가 결과 조회</string>
    <string name="title_tab_transport">교통 정보</string>
    <string name="title_section_etc">기타</string>
    <string name="search_hint">검색어를 입력하세요.</string>
    <string name="search_result_empty">검색된 결과가 없습니다.</string>
    <string name="search_found_amount">%1$d 개 검색되었습니다.</string>
    <string name="search_input_empty">검색어를 입력해주세요</string>
    <string name="action_exit">종료</string>
    <string name="action_refresh">새로고침</string>
    <string name="action_search">검색</string>
    <string name="action_search_option">검색 옵션</string>
    <string name="action_map">지도</string>
    <string name="action_web">웹</string>
    <string name="action_web_for_tab_map">모바일 UOS로 보기</string>
    <string name="action_web_for_tab_map_find">복지시설 검색</string>
    <string name="action_forward">앞으로</string>
    <string name="action_backward">뒤로</string>
    <string name="action_share">공유</string>
    <string name="action_copy">복사</string>
    <string name="action_save">저장</string>
    <string name="action_file_download">파일 다운로드</string>
    <string name="action_delete">삭제</string>
    <string name="action_dismiss_info">좌석 해지 예상 시간표</string>
    <string name="action_location_direction">경로 검색</string>
    <string name="action_open">열기</string>
    <string name="tab_announce_empty_view_desc"> 공지사항을 선택해 주세요.</string>
    <string name="tab_announce_invalid_category">카테고리를 선택해 주세요.</string>
    <string name="tab_announce_plz_select_page">이동할 페이지를 선택해 주세요.</string>
    <string name="tab_announce_show_next_page">다음 페이지</string>
    <string name="tab_announce_type_notice">공지</string>
    <string name="tab_announce_not_support_search_on_scholarship">장학/대출에서는 검색을 지원하지 않습니다.</string>
    <string name="tab_announce_no_download_link">다운로드 할 파일이 없습니다.</string>
    <string name="tab_announce_download_select_file">다운로드 할 파일을 선택해 주세요.</string>
    <string name="tab_announce_download_permission_reject">권한이 거절되어 파일을 다운로드할 수 없습니다.</string>
    <string name="tab_book_book_opt">도서 검색 옵션</string>
    <string name="tab_book_book_opt_sub">분류와 정렬 방식을 선택해 주세요</string>
    <string name="tab_book_not_found">검색된 페이지에 대여 가능 도서가 없습니다.</string>
    <string name="tab_book_subject_opt">검색 옵션을 선택해주세요</string>
    <string name="tab_book_subject_opt_both">검색 옵션을 모두 선택해주세요</string>
    <string name="tab_book_empty_text1"> 버튼을 터치하여 도서 검색을 해 보세요.</string>
    <string name="tab_book_empty_text2"> 도서 검색 옵션을 설정하여 상세한 검색을 할 수 있습니다.</string>
    <string name="tab_book_empty_text3"> 리스트나 책 이미지를 터치하면 자세한 정보를 볼 수 있습니다.</string>
    <string name="tab_book_sub_title">상세 도서 정보</string>
    <string name="tab_book_sub_could_not_load_info">도서 정보를 불러오지 못했습니다.</string>
    <string name="tab_book_image_transition_name">book_image_transition</string>
    <string name="tab_book_state_available">대출가능</string>
    <string name="tab_book_state_available_in_online">온라인 이용 가능</string>
    <string name="tab_book_state_not_available">대출중</string>
    <string name="tab_book_state_in_arrange">정리중</string>
    <string name="tab_book_state_broken_or_dirty">파오손</string>
    <string name="tab_book_state_missing">분실</string>
    <string name="tab_book_state_unknown">소재불명</string>
    <string name="tab_book_state_error">알수없음</string>
    <string name="tab_library_seat_last_update">최근 조회 시간\n</string>
    <string name="tab_library_seat_vacancy"> 잔여 좌석수 : </string>
    <string name="tab_library_seat_occupy"> 사용 좌석수 : </string>
    <string name="tab_library_seat_dismiss_info_not_exist_in_1hr">1시간 내에 해지될 좌석이 없습니다.</string>
    <string name="tab_library_seat_dismiss_info_time_within">%1$d 분이내</string>
    <string name="tab_library_seat_sub_seat_title">좌석 정보</string>
    <string name="tab_library_seat_empty_view_title"> 버튼을 누르거나 아래로 드래그 하여\n열람실 정보를 불러오세요.</string>
    <string name="tab_wise_score_login">Mobile Wise 로그인</string>
    <string name="tab_wise_score_empty_hint1">Wise에서 Mobile Wise를 등록할 수 있습니다.</string>
    <string name="tab_wise_score_empty_hint2">각 항목을 터치하면 상세 정보를 볼 수 있습니다.</string>
    <string name="tab_wise_score_sub_subtitle">%1$d학점 / %2$s / %3$s</string>
    <string name="tab_wise_score_score_earned_total">취득학점 : %1$s</string>
    <string name="tab_wise_score_eval_sum_total">평점합계 : %1$s</string>
    <string name="tab_wise_score_eval_percent_total">평점평균 : %1$s</string>
    <string name="tab_wise_score_eval_average_total">백분율 환산 : %1$s</string>
    <string name="tab_wise_score_empty_view_hint">버튼을 터치하여 검색을 시작하세요.</string>
    <string name="tab_wise_score_name">과목</string>
    <string name="tab_wise_score_subject_div">교과</string>
    <string name="tab_wise_score_credit">학점</string>
    <string name="tab_wise_score_grade">등급</string>
    <string name="tab_wise_score_eval">평점</string>
    <string name="tab_wise_score_valid">성적\n유효</string>
    <string name="tab_wise_score_retaking">재수강</string>
    <string name="tab_map_menu_title">건물 및 복지시설 검색</string>
    <string name="tab_map_menu_building">건물</string>
    <string name="tab_map_menu_welfare">복지시설</string>
    <string name="tab_map_map_layout_error">화면을 구성하는 도중 문제가 생겼습니다.</string>
    <string name="tab_map_device_cannot_init_googlemap">구글 지도를 사용할 수 없습니다.</string>
    <string name="tab_map_do_not_locate">현재 위치를 감지하지 못하였습니다. 잠시후에 시도하세요.</string>
    <string name="tab_map_select_dest">목적지 선택</string>
    <string name="tab_map_select_building">건물을 선택해 주세요.</string>
    <string name="tab_map_permission_denied">위치 권한이 거절되어 지도를 사용할 수 없습니다.</string>
    <string name="tab_map_buildings_welfare_cash">현금지급기</string>
    <string name="tab_map_buildings_welfare_bank">은행</string>
    <string name="tab_map_buildings_welfare_copy">복사점</string>
    <string name="tab_map_buildings_welfare_search">컴퓨터검색</string>
    <string name="tab_map_buildings_welfare_rest">휴게실</string>
    <string name="tab_map_buildings_welfare_elevator">엘리베이터</string>
    <string name="tab_map_buildings_welfare_health_center">보건소</string>
    <string name="tab_map_buildings_welfare_post">우체국</string>
    <string name="tab_map_buildings_welfare_restaurant">구내식당</string>
    <string name="tab_map_buildings_welfare_fast_food">패스트푸드</string>
    <string name="tab_map_buildings_welfare_stand">매점</string>
    <string name="tab_map_buildings_welfare_eye">안경점</string>
    <string name="tab_map_buildings_welfare_book">서점</string>
    <string name="tab_map_buildings_welfare_writing">문구점</string>
    <string name="tab_map_buildings_welfare_souvenir">기념품매장</string>
    <string name="tab_map_buildings_welfare_health">헬스장</string>
    <string name="tab_map_buildings_welfare_tennis">테니스장</string>
    <string-array name="tab_map_buildings_welfare_print">
        <item>2층 PC실(533호)</item>
        <item>전자도서관(입금가능), 2층 227호</item>
        <item>4층(입금가능), 5층, 6층(도서관)</item>
        <item>1층, 2층, 3층(입금가능), 4층</item>
        <item>3층 경영도서관, 4층 PC실(입금가능)</item>
        <item>1층 로비</item>
    </string-array>
    <string-array name="tab_map_buildings_welfare">
        <item>현금지급기</item>
        <item>은행</item>
        <item>복사점</item>
        <item>프린트</item>
        <item>컴퓨터검색</item>
        <item>휴게실</item>
        <item>엘리베이터</item>
        <item>보건소</item>
        <item>우체국</item>
        <item>구내식당</item>
        <item>패스트푸드</item>
        <item>매점</item>
        <item>안경점</item>
        <item>서점</item>
        <item>문구점</item>
        <item>기념품매장</item>
        <item>헬스장</item>
        <item>테니스장</item>
    </string-array>
    <string name="tab_rest_students_hall">학생회관</string>
    <string name="tab_rest_anekan">양식당</string>
    <string name="tab_rest_nature_science">자연과학관</string>
    <string name="tab_rest_main_8th">본관 8층</string>
    <string name="tab_rest_dormitory">생활관</string>
    <string name="tab_rest_breakfast">조식</string>
    <string name="tab_rest_lunch">중식</string>
    <string name="tab_rest_dinner">석식</string>
    <string name="tab_rest_no_info">정보가 없습니다.</string>
    <string name="tab_rest_show_menu_in_week">일주일간 메뉴 보기</string>
    <string name="tab_rest_operation_time">운영시간</string>
    <string name="tab_rest_operation_time_in_semester">학기중</string>
    <string name="tab_rest_operation_time_in_vacation">방학</string>
    <string name="tab_rest_operation_time_students_hall_in_semester">조식\n08:00~10:00\n\n중식\n11:00~14:00\n15:00~17:00</string>
    <string name="tab_timetable_mon">월</string>
    <string name="tab_timetable_tue">화</string>
    <string name="tab_timetable_wed">수</string>
    <string name="tab_timetable_thr">목</string>
    <string name="tab_timetable_fri">금</string>
    <string name="tab_timetable_sat">토</string>
    <string name="tab_timetable_period">시간</string>
    <string name="tab_timetable_empty_text1"> 버튼을 터치하여 시간표를 불러오세요.</string>
    <string name="tab_timetable_empty_text2">교과목을 터치하면 추가 정보를 얻을 수 있습니다.</string>
    <string name="tab_search_subject_sub_dept1">학부\n(과)</string>
    <string name="tab_search_subject_sub_div1">교과\n구분</string>
    <string name="tab_search_subject_no1">교과\n번호</string>
    <string name="tab_search_subject_class_div1">분반</string>
    <string name="tab_search_subject_sub_nm1">교과목명</string>
    <string name="tab_search_subject_yr1">학년</string>
    <string name="tab_search_subject_credit1">학점</string>
    <string name="tab_search_subject_prof_nm1">담당\n교수</string>
    <string name="tab_search_subject_class_nm1">강의시간\n및 강의실</string>
    <string name="tab_search_subject_tlsn_cnt1">인원</string>
    <string name="tab_search_subject_tlsn_limit1">정원</string>
</resources>