<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="?menu_theme_ic_action_action_search"
        android:orderInCategory="101"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView">
    </item>
    <item
        android:id="@+id/action_backward"
        android:icon="?menu_theme_ic_action_navigation_arrow_back"
        android:orderInCategory="103"
        android:title="@string/action_backward"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/action_forward"
        android:icon="?menu_theme_ic_action_navigation_arrow_forward"
        android:orderInCategory="105"
        android:title="@string/action_forward"
        app:showAsAction="ifRoom">
    </item>

</menu>